changes to w5 d4 daily challenge completed

--- a/.vscode/settings 2.json
+++ b/.vscode/settings 2.json
@@ -1,5 +1,4 @@
 {
-//    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.8/bin/python3",
     "code-runner.executorMapByFileExtension": {
 
         ".vb": "cd $dir && vbc /nologo $fileName && $dir$fileNameWithoutExt",
@@ -31,6 +30,6 @@
         ".sass": "sass --style expanded",
         ".cu": "cd $dir && nvcc $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
         ".python": "python3",
-        // ".py": "python3",
+        ".py": "python3"
     }
 }
